# kalibr

./: .gitignore  CMakeLists.txt  README.md  TEST_SUMMARY.md  analyze_cmake_files.py  analyze_package_deps.py  build_all.sh  install_dependencies.sh
Schweizer-Messer/: CMakeLists.txt
Schweizer-Messer/numpy_eigen/: CMakeLists.txt
Schweizer-Messer/numpy_eigen/cmake/: numpy_eigenConfig.cmake.in
Schweizer-Messer/python_module/: CMakeLists.txt
Schweizer-Messer/sm_boost/: CMakeLists.txt
Schweizer-Messer/sm_boost/cmake/: sm_boostConfig.cmake.in
Schweizer-Messer/sm_boost/include/boost/: portable_binary_archive.hpp
Schweizer-Messer/sm_boost/src/: portable_binary_oarchive.cpp
Schweizer-Messer/sm_common/: CMakeLists.txt
Schweizer-Messer/sm_common/cmake/: sm_commonConfig.cmake.in
Schweizer-Messer/sm_eigen/: CMakeLists.txt
Schweizer-Messer/sm_eigen/cmake/: sm_eigenConfig.cmake.in
Schweizer-Messer/sm_kinematics/: CMakeLists.txt
Schweizer-Messer/sm_kinematics/cmake/: sm_kinematicsConfig.cmake.in
Schweizer-Messer/sm_logging/: CMakeLists.txt
Schweizer-Messer/sm_logging/cmake/: sm_loggingConfig.cmake.in
Schweizer-Messer/sm_logging/include/sm/logging/: Logger.hpp
Schweizer-Messer/sm_logging/src/: LoggingGlobals.cpp
Schweizer-Messer/sm_matrix_archive/: CMakeLists.txt
Schweizer-Messer/sm_matrix_archive/cmake/: sm_matrix_archiveConfig.cmake.in
Schweizer-Messer/sm_opencv/: CMakeLists.txt
Schweizer-Messer/sm_opencv/cmake/: sm_opencvConfig.cmake.in
Schweizer-Messer/sm_property_tree/: CMakeLists.txt
Schweizer-Messer/sm_property_tree/cmake/: sm_property_treeConfig.cmake.in
Schweizer-Messer/sm_python/: CMakeLists.txt
Schweizer-Messer/sm_random/: CMakeLists.txt
Schweizer-Messer/sm_timing/: CMakeLists.txt
aslam_cv/: CMakeLists.txt
aslam_cv/aslam_cameras/: CMakeLists.txt
aslam_cv/aslam_cameras/include/aslam/: Frame.hpp
aslam_cv/aslam_cameras/include/aslam/cameras/: CameraGeometry.hpp
aslam_cv/aslam_cameras_april/: CMakeLists.txt
aslam_cv/aslam_cv_backend/: CMakeLists.txt
aslam_cv/aslam_cv_backend/src/: CameraGeometryDesignVariableContainer.cpp
aslam_cv/aslam_cv_backend_python/: CMakeLists.txt
aslam_cv/aslam_cv_error_terms/: CMakeLists.txt
aslam_cv/aslam_cv_error_terms/include/aslam/backend/: BSplineMotionError.hpp
aslam_cv/aslam_cv_error_terms/include/aslam/backend/implementation/: BSplineMotionError.hpp
aslam_cv/aslam_cv_python/: CMakeLists.txt
aslam_cv/aslam_cv_python/src/: Frame.cpp
aslam_cv/aslam_cv_serialization/: CMakeLists.txt
aslam_cv/aslam_imgproc/: CMakeLists.txt
aslam_cv/aslam_time/: CMakeLists.txt
aslam_incremental_calibration/: CMakeLists.txt
aslam_incremental_calibration/incremental_calibration/: CMakeLists.txt
aslam_incremental_calibration/incremental_calibration/include/aslam/calibration/algorithms/: marginalize.h
aslam_incremental_calibration/incremental_calibration/include/aslam/calibration/core/: LinearSolver.h
aslam_incremental_calibration/incremental_calibration/src/algorithms/: linalg.cpp
aslam_incremental_calibration/incremental_calibration/src/core/: LinearSolver.cpp
aslam_incremental_calibration/incremental_calibration/test/: IncrementalOptimizationProblemTest.cpp  LinearSolverTest.cpp  OptimizationProblemTest.cpp
aslam_incremental_calibration/incremental_calibration_python/: CMakeLists.txt
aslam_nonparametric_estimation/: CMakeLists.txt
aslam_nonparametric_estimation/aslam_splines/: CMakeLists.txt
aslam_nonparametric_estimation/aslam_splines_python/: CMakeLists.txt
aslam_nonparametric_estimation/bsplines/: CMakeLists.txt
aslam_nonparametric_estimation/bsplines_python/: CMakeLists.txt
aslam_offline_calibration/: CMakeLists.txt
aslam_offline_calibration/ethz_apriltag2/: CMakeLists.txt
aslam_offline_calibration/kalibr/: CMakeLists.txt
aslam_offline_calibration/kalibr/.memsearch/memory/: 2026-03-30.md
aslam_offline_calibration/kalibr/test/: TestCameraCalibration.cpp
aslam_optimizer/: CMakeLists.txt
aslam_optimizer/aslam_backend/: CMakeLists.txt
aslam_optimizer/aslam_backend/include/aslam/backend/: Cholmod.hpp
aslam_optimizer/aslam_backend/src/: SparseQRLinearSolverOptions.cpp
aslam_optimizer/aslam_backend_expressions/: CMakeLists.txt
aslam_optimizer/aslam_backend_python/: CMakeLists.txt
aslam_optimizer/aslam_backend_python/include/aslam/python/: ExportFrame.hpp
aslam_optimizer/sparse_block_matrix/: CMakeLists.txt
aslam_optimizer/sparse_block_matrix/include/sparse_block_matrix/: linear_solver_cholmod.h  sparse_block_matrix.h  sparse_helper.h
aslam_optimizer/sparse_block_matrix/include/sparse_block_matrix/implementation/: sparse_block_matrix.hpp  sparse_helper.h
cmake/modules/: CatkinReplacements.cmake  FindDependencies.cmake  KalibrConfig.cmake.in  ModuleDependencies.cmake  PythonBindingHelpers.cmake
docs/: BATCH_MIGRATION_EXECUTION_MANUAL.md  CATKIN_TO_CMAKE_MIGRATION_GUIDE.md  FINAL_SUMMARY_REPORT.md  MIGRATION_PROGRESS_AND_NEXT_STEPS.md  MIGRATION_PROGRESS_REPORT.md  MIGRATION_PROGRESS_REPORT_20260330_1400.md  MODULE_VERIFICATION_TEST_GUIDE.md  PROJECT_PROGRESS_SUMMARY.md  README.md  TARGET_CONFIGURATION_GUIDE.md  TEMPLATE.md  ros_removal_top_level_plan.md
docs/modules/aslam_cv/: README.md  aslam_cameras.md  aslam_cameras_april.md  aslam_cv_backend.md  aslam_cv_error_terms.md  aslam_cv_serialization.md  aslam_imgproc.md  aslam_time.md
docs/modules/aslam_incremental_calibration/: README.md  incremental_calibration.md
docs/modules/aslam_nonparametric_estimation/: README.md  aslam_splines.md  bsplines.md
docs/modules/aslam_offline_calibration/: README.md  ethz_apriltag2.md
docs/modules/calibration/: README.md  kalibr.md
docs/modules/infrastructure/: README.md  catkin_simple.md  (+1 more)
docs/risk_assessment/: comprehensive_project_analysis.md  lightweight_risk_plan.md  project_structure_analysis.md  risk_assessment_and_mitigation.md
docs/ros_analysis/: CMakeLists.txt.template  Config.cmake.in.template  catkin_migration_sop.md  ros_dependency_analysis_report.md
docs/ros_dependency_analysis/: cmake_analysis.txt  package_xml_analysis.txt
(+18 files in other folders)
